refactor: reorganiza estrutura de pacotes e renomeia classes
- Move Location.java para pacote domain/dop
- Move ValidationResult.java para pacote validation
- Renomeia classes DTO com sufixo DTO para consistência:
  * CreateHolidayRequest -> CreateHolidayRequestDTO
  * HolidayData -> HolidayDataDTO
  * HolidayQuery -> HolidayQueryDTO
  * LocationInfo -> LocationInfoDTO
  * UpdateHolidayRequest -> UpdateHolidayRequestDTO
  * WhenInfo -> WhenInfoDTO
- Atualiza imports e referências em todas as classes afetadas
- Renomeia testes correspondentes para manter consistência
- Todos os 92 testes unitários passando
- Compilação bem-sucedida